src/FinancialForce Accounting/objects/codaTransaction__c.object
<CustomObject>
    <customHelpPage>codahelptransaction</customHelpPage>
    <description>Holds header information about a transaction.</description>
    <fields>
        <fullName>AccountOutstandingTotal__c</fullName>
        <label>Account Outstanding Total</label>
        <summarizedField>codaTransactionLineItem__c.AccountOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AccountTotal__c</fullName>
        <label>Account Total</label>
        <summarizedField>codaTransactionLineItem__c.AccountValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>codaCashEntry__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Home Credits</label>
        <summarizedField>codaTransactionLineItem__c.HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.HomeValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CurrencyRevaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation</label>
        <referenceTo>codaCurrencyRevaluation__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debits__c</fullName>
        <label>Home Debits</label>
        <summarizedField>codaTransactionLineItem__c.HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.HomeValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DocumentDescription__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentOutstandingTotal__c</fullName>
        <label>Document Outstanding Total</label>
        <summarizedField>codaTransactionLineItem__c.DocumentOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DocumentReference2__c</fullName>
        <label>Document Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentTotal__c</fullName>
        <label>Document Total</label>
        <summarizedField>codaTransactionLineItem__c.DocumentValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DualCredits__c</fullName>
        <label>Dual Credits</label>
        <summarizedField>codaTransactionLineItem__c.DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.DualValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DualDebits__c</fullName>
        <label>Dual Debits</label>
        <summarizedField>codaTransactionLineItem__c.DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaTransactionLineItem__c.DualValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DualValueTotal__c</fullName>
        <label>Dual Value Total</label>
        <summarizedField>codaTransactionLineItem__c.DualValue__c</summarizedField>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HomeValueTotal__c</fullName>
        <label>Home Value Total</label>
        <summarizedField>codaTransactionLineItem__c.HomeValue__c</summarizedField>
        <summaryForeignKey>codaTransactionLineItem__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule Group</label>
        <referenceTo>codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Group</label>
        <referenceTo>codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions (Invoice Group)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <label>MatchType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Transaction Number</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Reverse Transaction)</relationshipLabel>
        <relationshipName>OriginalTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note</label>
        <referenceTo>codaPurchaseCreditNote__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReverseReason__c</fullName>
        <label>Reverse Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReverseTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Transaction Number</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Original Transaction)</relationshipLabel>
        <relationshipName>ReverseTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>codaCreditNote__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Purchase Invoice</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Purchase Credit Note</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Journal</fullName>
                </value>
                <value>
                    <fullName>Currency Revaluation</fullName>
                </value>
                <value>
                    <fullName>Year End Journal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VendorDocumentNumber__c</fullName>
        <label>Vendor Document Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TransactionType__c</columns>
        <columns>TransactionDate__c</columns>
        <columns>Period__c</columns>
        <columns>Credits__c</columns>
        <columns>Debits__c</columns>
        <columns>HomeValueTotal__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllocationTransactions</fullName>
        <columns>NAME</columns>
        <columns>TransactionType__c</columns>
        <columns>TransactionDate__c</columns>
        <columns>Period__c</columns>
        <columns>Credits__c</columns>
        <columns>Debits__c</columns>
        <columns>HomeValueTotal__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TransactionType__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </filters>
        <label>Allocation Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>TRN{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>